content/docs/v2026.2.16-rc.0/guides/kafka/concepts/connector.md
---
title: Connector CRD
menu:
  docs_v2026.2.16-rc.0:
    identifier: kf-connector-concepts
    name: Connector
    parent: kf-concepts-kafka
    weight: 30
menu_name: docs_v2026.2.16-rc.0
section_menu_id: guides
info:
  autoscaler: v0.46.0-rc.0
  cli: v0.61.0-rc.0
  dashboard: v0.37.0-rc.0
  installer: v2026.2.16-rc.0
  ops-manager: v0.48.0-rc.0
  provisioner: v0.61.0-rc.0
  schema-manager: v0.37.0-rc.0
  ui-server: v0.37.0-rc.0
  version: v2026.2.16-rc.0
  webhook-server: v0.37.0-rc.0
---

> New to KubeDB? Please start [here](/docs/v2026.2.16-rc.0/README).

# Connector

## What is Connector

`Connector` is a Kubernetes `Custom Resource Definitions` (CRD). It provides declarative configuration for [Connector](https://kafka.apache.org/) in a Kubernetes native way. You only need to describe the desired configuration in a `Connector` object, and the KubeDB operator will create Kubernetes objects in the desired state for you.

## Connector Spec

As with all other Kubernetes objects, a Connector needs `apiVersion`, `kind`, and `metadata` fields. It also needs a `.spec` section. Below is an example Connector object.

```yaml
apiVersion: kafka.kubedb.com/v1alpha1
kind: Connector
metadata:
  name: mongodb-source-connector
  namespace: demo
spec:
  configuration:
    secretName: mongodb-source-config
    inline:
      config.properties: |
        connector.class=com.mongodb.*
        tasks.max=1
        topic.prefix=mongodb-
        connection.uri=mongodb://mongo-user:
  connectClusterRef:
    name: connectcluster-quickstart
    namespace: demo
  deletionPolicy: WipeOut
```

### spec.configuration.secretName

`spec.configuration.secretName` is a required field that specifies the name of the secret containing the configuration for the Connector. The secret should contain a key `config.properties` which contains the configuration for the Connector.
```yaml
spec:
  configuration:
    secretName: <config-secret-name>
```

> **Note**: Use `.spec.configuration.secretName` to specify the name of the secret instead of `.spec.configSecret.name` The field `.spec.configsecret` is deprecated and will be removed in future releases. If you still use `.spec.configSecret`, KubeDB will copy `.spec.configSecret.name` to `.spec.configuration.secretName` internally.
### spec.configuration

`spec.configuration` is a required field that specifies the configuration for the Connector. It can either be specified inline or as a reference to a secret.
```yaml
spec:
  configuration:
    secretName: <config-secret-name>
```
or
```yaml
spec:
  configuration:
    inline:
      config.properties: |
        connector.class=com.mongodb.*
        tasks.max=1
        topic.prefix=mongodb-
        connection.uri=mongodb://mongo-user:mongo-password@mongo-host:27017
```

### spec.connectClusterRef

`spec.connectClusterRef` is a required field that specifies the name and namespace of the `ConnectCluster` object that the `Connector` object is associated with. This is an appbinding reference for `ConnectCluster` object.
```yaml
spec:
  connectClusterRef:
    name: <connectcluster-appbinding-name>
    namespace: <connectcluster-appbinding-namespace>
```

### spec.deletionPolicy

`spec.deletionPolicy` gives flexibility whether to `nullify`(reject) the delete operation of `Connector` CR or which resources KubeDB should keep or delete when you delete `Connector` CR. KubeDB provides following three deletion policies:

- Delete
- DoNotTerminate
- WipeOut

When `deletionPolicy` is `DoNotTerminate`, KubeDB takes advantage of `ValidationWebhook` feature in Kubernetes 1.9.0 or later clusters to implement `DoNotTerminate` feature. If admission webhook is enabled, `DoNotTerminate` prevents users from deleting the resource as long as the `spec.deletionPolicy` is set to `DoNotTerminate`.

Deletion policy `WipeOut` will delete the connector from the ConnectCluster when the Connector CR is deleted and `Delete` keep the connector after deleting the Connector CR.

## Next Steps

- Learn how to use KubeDB to run Apache Kafka cluster [here](/docs/v2026.2.16-rc.0/guides/kafka/quickstart/kafka/).
- Learn how to use KubeDB to run Apache Kafka Connect cluster [here](/docs/v2026.2.16-rc.0/guides/kafka/connectcluster/quickstart).
- Detail concepts of [KafkaConnectorVersion object](/docs/v2026.2.16-rc.0/guides/kafka/concepts/kafkaconnectorversion).
- Learn to use KubeDB managed Kafka objects using [CLIs](/docs/v2026.2.16-rc.0/guides/kafka/cli/cli).
- Want to hack on KubeDB? Check our [contribution guidelines](/docs/v2026.2.16-rc.0/CONTRIBUTING).
